--- a/textures/textures.qrc
+++ b/textures/textures.qrc
@@ -7,5 +7,6 @@
     <file>images/side4.png</file>
     <file>images/side5.png</file>
     <file>images/side6.png</file>
+    <file>filmeto.png</file>
 </qresource>
 </RCC>
