--- a/style/dark_style.qss
+++ b/style/dark_style.qss
@@ -143,3 +143,20 @@ QSplitter::handle{
 #main_window_workspace_bottom{
     background-color: #1e1f22;
 }
+
+/* Left Panel Dialog Styles */
+#LeftPanelDialogLeftPanel {
+    background-color: #3d3f4e;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: 1px solid #505254;
+    border-right: none;
+}
+
+#LeftPanelDialogRightWorkArea {
+    background-color: #2b2d30;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid #505254;
+    border-left: none;
+}
