--- a/style/dark_style.qss
+++ b/style/dark_style.qss
@@ -691,7 +691,9 @@ QListWidget#agent_chat_members_list {
 QListWidget#agent_chat_members_list::item {
     background-color: #2b2b2b;
     border-bottom: 1px solid #333333;
-    padding: 5px;
+    padding: 0px;  /* Remove default padding to allow custom widget to control spacing */
+    margin: 0px;   /* Remove default margin */
+    height: 50px;  /* Set fixed height to match the minimum height of our custom widget */
 }
 
 QListWidget#agent_chat_members_list::item:selected {
